--- a/src/app/App.css
+++ b/src/app/App.css
@@ -9,4 +9,11 @@
   justify-content: center;
   flex-wrap: wrap;
   gap: 2rem;
+  font-size: 1px;
+}
+
+@media screen and (max-width: 42rem) {
+  .App * {
+    min-width: 100%;
+  }
 }
